# librarian

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Goal-Instructions.txt  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: check_changelog_ready.py  export_constraints.py  release_notes.py  verify_release_evidence.py
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  macapp.yml  pages.yml  release.yml  secrets.yml
apps/macos/: Makefile  Package.swift  README.md
apps/macos/Support/: AppIcon.icns  Info.plist
apps/macos/scripts/: bundle_backend.sh  bundle_ocr.sh  make_dmg.sh  sign_app.sh
docs/: API.md  ARCHITECTURE.md  CONVERSION.md  DEPLOYMENT.md  EVALUATION.md  EXTERNAL_REPO_REVIEW.md  MIGRATIONS.md  NAMING.md  OKF.md  OPERATIONS.md  PERFORMANCE.md  PRD.md  QUICKSTART.md  RELEASE.md  ROADMAP.md  SUPPLY_CHAIN.md  THREAT_MODEL.md
examples/: benchmark_text.txt  corpus_eval_cases.json  eval_cases.json
examples/baselines/: mock-eval.json
examples/corpus/: health-interview.txt  markdown-transcript.md
examples/synthetic-corpus/: corpus_eval_cases.json
examples/synthetic-corpus/corpus/: 001-equine-training.md  002-health-interview.md  003-equine-training-docx.docx  004-health-interview-docx.docx  005-library-workshop-docx.docx  012-equine-training-captions.srt  013-health-interview-captions.vtt
site/: index.html
src/librarian/: __init__.py  __main__.py  config.py  observability.py  version.py
src/librarian/api/: __init__.py  app.py
src/librarian/cli/: __init__.py  (+1 more)
tests/: conftest.py  test_api.py  test_api_processing.py  test_assembly.py  test_audit_lifecycle.py  test_benchmark.py  test_chunking.py  test_ci_workflow.py  test_classification.py  test_cli.py  test_config.py  test_container_config.py  test_conversion.py  test_corpus_eval.py  test_eval.py  test_export_document.py  test_export_okf.py  test_extraction_cache.py  test_extractors.py  test_figure_vision.py  test_import_concurrency.py  test_import_library.py  test_liteparse_extractor.py  test_observability.py  test_ocr_orientation.py  test_openai_compatible.py  test_packaging_hygiene.py  test_parent_watch.py  test_processing.py  test_prompts.py  test_provider_integration.py  test_release_workflow.py  test_search_library.py  test_series_linking.py  test_sqlite.py  test_transcripts.py  test_validation.py
(+80 files in other folders)
